src/main/java/compiladores/.antlr/compiladoresParser.java
// Generated from c://Users//lucia//Desktop//BaseCompiladores-master-main//src//main//java//compiladores//compiladores.g4 by ANTLR 4.13.1

package compiladores;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class compiladoresParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, PI=2, PD=3, LI=4, LD=5, PYC=6, COMA=7, PUNTO=8, DOSPUNTOS=9, IF=10, 
		ELSE=11, COMPARE=12, SWITCH=13, CASE=14, DEFAULT=15, FOR=16, WHILE=17, 
		CADENA=18, RETURN=19, BREAK=20, MAS=21, MENOS=22, MULTI=23, DIVI=24, ACUM=25, 
		IGUAL=26, ANDOR=27, VOID=28, DOUBLE=29, FLOAT=30, INT=31, STRING=32, NOMBRE=33, 
		NUMERO=34;
	public static final int
		RULE_programa = 0, RULE_tipo = 1, RULE_instrucciones = 2, RULE_instruccion = 3, 
		RULE_expresion = 4, RULE_condicion = 5, RULE_llaves = 6, RULE_declaracion = 7, 
		RULE_declaracion_continua = 8, RULE_asignacion = 9, RULE_myIf = 10, RULE_expresionFor = 11, 
		RULE_myFor = 12, RULE_myWhile = 13, RULE_mySwitch = 14, RULE_bloqueSwitch = 15, 
		RULE_myCase = 16, RULE_myBreak = 17, RULE_default = 18, RULE_llamadaFuncion = 19, 
		RULE_argumentos = 20, RULE_argumentos_continuos = 21, RULE_declaracionFuncion = 22, 
		RULE_parametros = 23, RULE_parametros_continuos = 24, RULE_myReturn = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "tipo", "instrucciones", "instruccion", "expresion", "condicion", 
			"llaves", "declaracion", "declaracion_continua", "asignacion", "myIf", 
			"expresionFor", "myFor", "myWhile", "mySwitch", "bloqueSwitch", "myCase", 
			"myBreak", "default", "llamadaFuncion", "argumentos", "argumentos_continuos", 
			"declaracionFuncion", "parametros", "parametros_continuos", "myReturn"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'('", "')'", "'{'", "'}'", "';'", "','", "'.'", "':'", "'if'", 
			"'else'", null, "'switch'", "'case'", "'default'", "'for'", "'while'", 
			null, "'return'", "'break'", "'+'", "'-'", "'*'", "'/'", null, "'='", 
			null, "'void'", "'double'", "'float'", "'int'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "PI", "PD", "LI", "LD", "PYC", "COMA", "PUNTO", "DOSPUNTOS", 
			"IF", "ELSE", "COMPARE", "SWITCH", "CASE", "DEFAULT", "FOR", "WHILE", 
			"CADENA", "RETURN", "BREAK", "MAS", "MENOS", "MULTI", "DIVI", "ACUM", 
			"IGUAL", "ANDOR", "VOID", "DOUBLE", "FLOAT", "INT", "STRING", "NOMBRE", 
			"NUMERO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "compiladores.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public compiladoresParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(compiladoresParser.EOF, 0); }
		public DeclaracionFuncionContext declaracionFuncion() {
			return getRuleContext(DeclaracionFuncionContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(52);
				declaracionFuncion();
				}
				break;
			case 2:
				{
				setState(53);
				instrucciones();
				}
				break;
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(compiladoresParser.VOID, 0); }
		public TerminalNode DOUBLE() { return getToken(compiladoresParser.DOUBLE, 0); }
		public TerminalNode FLOAT() { return getToken(compiladoresParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(compiladoresParser.INT, 0); }
		public TerminalNode STRING() { return getToken(compiladoresParser.STRING, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8321499136L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16913212432L) != 0)) {
				{
				{
				setState(60);
				instruccion();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public LlavesContext llaves() {
			return getRuleContext(LlavesContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public MyIfContext myIf() {
			return getRuleContext(MyIfContext.class,0);
		}
		public MyForContext myFor() {
			return getRuleContext(MyForContext.class,0);
		}
		public MyWhileContext myWhile() {
			return getRuleContext(MyWhileContext.class,0);
		}
		public MySwitchContext mySwitch() {
			return getRuleContext(MySwitchContext.class,0);
		}
		public DeclaracionFuncionContext declaracionFuncion() {
			return getRuleContext(DeclaracionFuncionContext.class,0);
		}
		public LlamadaFuncionContext llamadaFuncion() {
			return getRuleContext(LlamadaFuncionContext.class,0);
		}
		public TerminalNode PYC() { return getToken(compiladoresParser.PYC, 0); }
		public MyReturnContext myReturn() {
			return getRuleContext(MyReturnContext.class,0);
		}
		public MyBreakContext myBreak() {
			return getRuleContext(MyBreakContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruccion);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				llaves();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				declaracion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				asignacion();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				myIf();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				myFor();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				myWhile();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(72);
				mySwitch();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(73);
				declaracionFuncion();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(74);
				llamadaFuncion();
				setState(75);
				match(PYC);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(77);
				myReturn();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(78);
				myBreak();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpresionContext extends ParserRuleContext {
		public List<TerminalNode> NOMBRE() { return getTokens(compiladoresParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(compiladoresParser.NOMBRE, i);
		}
		public List<TerminalNode> NUMERO() { return getTokens(compiladoresParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(compiladoresParser.NUMERO, i);
		}
		public List<LlamadaFuncionContext> llamadaFuncion() {
			return getRuleContexts(LlamadaFuncionContext.class);
		}
		public LlamadaFuncionContext llamadaFuncion(int i) {
			return getRuleContext(LlamadaFuncionContext.class,i);
		}
		public List<TerminalNode> MAS() { return getTokens(compiladoresParser.MAS); }
		public TerminalNode MAS(int i) {
			return getToken(compiladoresParser.MAS, i);
		}
		public List<TerminalNode> MENOS() { return getTokens(compiladoresParser.MENOS); }
		public TerminalNode MENOS(int i) {
			return getToken(compiladoresParser.MENOS, i);
		}
		public List<TerminalNode> MULTI() { return getTokens(compiladoresParser.MULTI); }
		public TerminalNode MULTI(int i) {
			return getToken(compiladoresParser.MULTI, i);
		}
		public List<TerminalNode> DIVI() { return getTokens(compiladoresParser.DIVI); }
		public TerminalNode DIVI(int i) {
			return getToken(compiladoresParser.DIVI, i);
		}
		public List<TerminalNode> ANDOR() { return getTokens(compiladoresParser.ANDOR); }
		public TerminalNode ANDOR(int i) {
			return getToken(compiladoresParser.ANDOR, i);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expresion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(81);
				match(NOMBRE);
				}
				break;
			case 2:
				{
				setState(82);
				match(NUMERO);
				}
				break;
			case 3:
				{
				setState(83);
				llamadaFuncion();
				}
				break;
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 165675008L) != 0)) {
				{
				{
				setState(86);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 165675008L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(90);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(87);
					match(NOMBRE);
					}
					break;
				case 2:
					{
					setState(88);
					match(NUMERO);
					}
					break;
				case 3:
					{
					setState(89);
					llamadaFuncion();
					}
					break;
				}
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionContext extends ParserRuleContext {
		public List<TerminalNode> NOMBRE() { return getTokens(compiladoresParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(compiladoresParser.NOMBRE, i);
		}
		public List<TerminalNode> NUMERO() { return getTokens(compiladoresParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(compiladoresParser.NUMERO, i);
		}
		public List<LlamadaFuncionContext> llamadaFuncion() {
			return getRuleContexts(LlamadaFuncionContext.class);
		}
		public LlamadaFuncionContext llamadaFuncion(int i) {
			return getRuleContext(LlamadaFuncionContext.class,i);
		}
		public List<TerminalNode> COMPARE() { return getTokens(compiladoresParser.COMPARE); }
		public TerminalNode COMPARE(int i) {
			return getToken(compiladoresParser.COMPARE, i);
		}
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(97);
				match(NOMBRE);
				}
				break;
			case 2:
				{
				setState(98);
				match(NUMERO);
				}
				break;
			case 3:
				{
				setState(99);
				llamadaFuncion();
				}
				break;
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMPARE) {
				{
				{
				setState(102);
				match(COMPARE);
				setState(106);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(103);
					match(NOMBRE);
					}
					break;
				case 2:
					{
					setState(104);
					match(NUMERO);
					}
					break;
				case 3:
					{
					setState(105);
					llamadaFuncion();
					}
					break;
				}
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LlavesContext extends ParserRuleContext {
		public TerminalNode LI() { return getToken(compiladoresParser.LI, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LD() { return getToken(compiladoresParser.LD, 0); }
		public LlavesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llaves; }
	}

	public final LlavesContext llaves() throws RecognitionException {
		LlavesContext _localctx = new LlavesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_llaves);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(LI);
			setState(114);
			instrucciones();
			setState(115);
			match(LD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode NOMBRE() { return getToken(compiladoresParser.NOMBRE, 0); }
		public Declaracion_continuaContext declaracion_continua() {
			return getRuleContext(Declaracion_continuaContext.class,0);
		}
		public TerminalNode PYC() { return getToken(compiladoresParser.PYC, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracion);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				tipo();
				setState(118);
				match(NOMBRE);
				setState(119);
				declaracion_continua();
				setState(120);
				match(PYC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				tipo();
				setState(123);
				asignacion();
				setState(124);
				declaracion_continua();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_continuaContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(compiladoresParser.COMA, 0); }
		public TerminalNode NOMBRE() { return getToken(compiladoresParser.NOMBRE, 0); }
		public Declaracion_continuaContext declaracion_continua() {
			return getRuleContext(Declaracion_continuaContext.class,0);
		}
		public Declaracion_continuaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_continua; }
	}

	public final Declaracion_continuaContext declaracion_continua() throws RecognitionException {
		Declaracion_continuaContext _localctx = new Declaracion_continuaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracion_continua);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(COMA);
				setState(129);
				match(NOMBRE);
				setState(130);
				declaracion_continua();
				}
				break;
			case EOF:
			case LI:
			case LD:
			case PYC:
			case IF:
			case SWITCH:
			case CASE:
			case DEFAULT:
			case FOR:
			case WHILE:
			case RETURN:
			case BREAK:
			case VOID:
			case DOUBLE:
			case FLOAT:
			case INT:
			case STRING:
			case NOMBRE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode NOMBRE() { return getToken(compiladoresParser.NOMBRE, 0); }
		public TerminalNode IGUAL() { return getToken(compiladoresParser.IGUAL, 0); }
		public TerminalNode PYC() { return getToken(compiladoresParser.PYC, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode NUMERO() { return getToken(compiladoresParser.NUMERO, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(NOMBRE);
			setState(135);
			match(IGUAL);
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(136);
				expresion();
				}
				break;
			case 2:
				{
				setState(137);
				match(NUMERO);
				}
				break;
			}
			setState(140);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MyIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(compiladoresParser.IF, 0); }
		public TerminalNode PI() { return getToken(compiladoresParser.PI, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PD() { return getToken(compiladoresParser.PD, 0); }
		public List<LlavesContext> llaves() {
			return getRuleContexts(LlavesContext.class);
		}
		public LlavesContext llaves(int i) {
			return getRuleContext(LlavesContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(compiladoresParser.ELSE, 0); }
		public MyIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myIf; }
	}

	public final MyIfContext myIf() throws RecognitionException {
		MyIfContext _localctx = new MyIfContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_myIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(IF);
			setState(143);
			match(PI);
			setState(144);
			condicion();
			setState(145);
			match(PD);
			setState(146);
			llaves();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(147);
				match(ELSE);
				setState(148);
				llaves();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpresionForContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(compiladoresParser.INT, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PYC() { return getToken(compiladoresParser.PYC, 0); }
		public TerminalNode NOMBRE() { return getToken(compiladoresParser.NOMBRE, 0); }
		public TerminalNode ACUM() { return getToken(compiladoresParser.ACUM, 0); }
		public ExpresionForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionFor; }
	}

	public final ExpresionForContext expresionFor() throws RecognitionException {
		ExpresionForContext _localctx = new ExpresionForContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expresionFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(INT);
			setState(152);
			asignacion();
			setState(153);
			condicion();
			setState(154);
			match(PYC);
			setState(155);
			match(NOMBRE);
			setState(156);
			match(ACUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MyForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(compiladoresParser.FOR, 0); }
		public TerminalNode PI() { return getToken(compiladoresParser.PI, 0); }
		public ExpresionForContext expresionFor() {
			return getRuleContext(ExpresionForContext.class,0);
		}
		public TerminalNode PD() { return getToken(compiladoresParser.PD, 0); }
		public LlavesContext llaves() {
			return getRuleContext(LlavesContext.class,0);
		}
		public MyForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myFor; }
	}

	public final MyForContext myFor() throws RecognitionException {
		MyForContext _localctx = new MyForContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_myFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(FOR);
			setState(159);
			match(PI);
			setState(160);
			expresionFor();
			setState(161);
			match(PD);
			setState(162);
			llaves();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MyWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(compiladoresParser.WHILE, 0); }
		public TerminalNode PI() { return getToken(compiladoresParser.PI, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PD() { return getToken(compiladoresParser.PD, 0); }
		public LlavesContext llaves() {
			return getRuleContext(LlavesContext.class,0);
		}
		public MyWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myWhile; }
	}

	public final MyWhileContext myWhile() throws RecognitionException {
		MyWhileContext _localctx = new MyWhileContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_myWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(WHILE);
			setState(165);
			match(PI);
			setState(166);
			condicion();
			setState(167);
			match(PD);
			setState(168);
			llaves();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
